# odoo-bringout-product-101

./: README.md  product_101_main.py  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
product_101/: __manifest__.py
product_101/data/: product_data.xml
product_101/models/: __init__.py  product_101.py
product_101/tests/: __init__.py  test_product_101.py
